--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "quality-education",
   "version": "1.0.0",
   "description": "",
-
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tw": "npx tailwindcss -i ./public/tw.css -o ./public/style.css --watch",
     "start": "parcel public/index.html",
-     "build": "parcel build public/index.html"
+    "build": "parcel build public/index.html"
   },
   "author": "rushi",
   "license": "ISC",
@@ -18,6 +17,7 @@
     "tailwindcss": "^3.4.4"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "axios": "^1.7.2",
