--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@heroicons/react": "^2.1.4",
     "axios": "^1.7.2",
     "markdown-to-jsx": "^7.4.7",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1"
